# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  catalog.json  fly.toml
backend/: main.py  pyproject.toml
backend/tests/: conftest.py  test_auth.py  test_autofill.py  test_chat.py  test_document_api.py  test_documents.py  test_main.py
frontend/: jest.config.ts  jest.setup.ts  package-lock.json  package.json  playwright.config.ts
frontend/__tests__/components/: create-client.test.tsx  create.test.tsx  landing.test.tsx  preview.test.tsx
frontend/__tests__/e2e/: nda-flow.spec.ts
frontend/__tests__/unit/: nda.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/create/[docType]/: create-client.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/preview/: page.tsx
frontend/app/preview/[docType]/: page.tsx  preview-client.tsx
frontend/lib/: auth.ts  documents.ts  nda.ts  templates.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
